--- a/templates/blog/blog.html
+++ b/templates/blog/blog.html
@@ -18,7 +18,7 @@
     <div class="row center">
             <h1 class="card-title font-weight-bold">{{blog.title}}</h1>
             <p class="card-text"> {{ blog.body }}</p>
-             <span class="text-muted"> {{blog.date_posted.date }} by {{blog.creator}} </span>
+             <span class="text-muted"> {{blog.date_posted.date }} by {{ request.creator }} </span>
     </div>
     <a href="{% url 'delete_post' blog.id %}" class="btn btn-md btn-danger">Delete</a>
 
