--- a/templates/blog/homepage.html
+++ b/templates/blog/homepage.html
@@ -2,8 +2,14 @@
 {% load static %}
 {% block content %}
 <div class="container">
-    <h1 class="text-center">My Rants World</h1>
-    <a href="{% url 'create_blog' %}" class="btn btn-md btn-info"> &#43; Add Blog</a>
+    <h1 class="text-center">Trending Posts</h1>
+    {% if not user.is_authenticated  %}
+       <a href="{% url 'login' %}" class="btn btn-md btn-primary">Login</a>
+    {% endif %}
+    
+    {% if user.is_authenticated %}
+      <a href="{% url 'create_blog' %}" class="btn btn-md btn-info"> &#43; Add Blog</a>
+    {% endif %}
      <div class="row">
         {% for blog_post in blog_posts %}
             <div class="col-lg-4 col-md-3">
@@ -13,7 +19,11 @@
                     <h5 class="card-title font-weight-bold"><a href="{% url 'blog' blog_post.id %}">{{ blog_post.title}}</a></h5>
                     <p class="card-text"> {{ blog_post.body| truncatewords:15 }}</p>
                     <a href="{% url 'blog' blog_post.id %}" class="btn btn-primary">Read more</a> <br>
-                    <span class="text-muted"> {{blog_post.date_posted.date }} by {{blog_post.creator}} </span>
+                    <span class="text-muted"> {{blog_post.date_posted.date }} by 
+                        
+                        {{blog_post.creator}} 
+                    
+                    </span>
                     </div>
                 </div>
             </div>
@@ -23,3 +33,4 @@
 </div>
 
 {% endblock %}
+
