--- a/templates/blog/navbar.html
+++ b/templates/blog/navbar.html
@@ -7,15 +7,16 @@
 
     }
 </style>
-
-<nav class="navbar navbar-light bg-light">
-    <a class="navbar-brand">Navbar</a>
-    <p class="users"> Welcome {{ request.user }} </p>
-    <form class="form-inline">
-      <input class="form-control mr-sm-2" type="search" placeholder="Search" aria-label="Search">
-      <button class="btn btn-outline-success my-2 my-sm-0" type="submit">Search</button>
-    </form>
-    <a href="{% url 'logout' %}">Logout</a>
+{% if user.is_authenticated %}
+  <nav class="navbar navbar-light bg-light">
+      <a class="navbar-brand">Navbar</a>
+      <p class="users"> Welcome {{ request.user }} </p>
+      <form class="form-inline">
+        <input class="form-control mr-sm-2" type="search" placeholder="Search" aria-label="Search">
+        <button class="btn btn-outline-success my-2 my-sm-0" type="submit">Search</button>
+      </form>
+      <a href="{% url 'logout' %}" class="btn btn-info">Logout</a>
   </nav>
+{% endif %}
 
 {% endblock %}
