--- a/templates/blog/user_page.html
+++ b/templates/blog/user_page.html
@@ -1,10 +1,36 @@
+{% extends 'blog/main.html'%}
 {% load static %}
 {% block content %}
+<style>
+  .profile-pic{
+      max-width: 200px;
+      max-height: 200px;
+      margin: 0 auto;
+      border-radius: 50%;
+  }
+</style>
 
-{% for post in posts %}
 
-  {{ post }}
+<br>
+<div class="row">
+  <div class="col-md-3">
+      <div class="card card-body">
+          <a href="{% url 'home' %}" class="btn btn-primary"> &#8592; Back to settings</a>
+          <hr>
+          <h3 style="text-align: center">Account Settings</h3>
+           <hr>
+           <img class="profile-pic" src="{{request.user.profile.profile_pic.url}}" >
+      </div>
+  </div>
 
-{% endfor %}
-
+  <div class="col-md-9">
+      <div class="card card-body">
+          <form enctype="multipart/form-data" method="POST" action="/profile/">
+              {% csrf_token %}
+              {{form.as_p}}
+          </from>
+          <input  class="btn btn-primary" value="Submit" name="Update-Information" type="submit">
+      </div>
+  </div>
+</div>
 {% endblock %}
