--- a/templates/blog/homepage.html
+++ b/templates/blog/homepage.html
@@ -7,9 +7,7 @@
        <a href="{% url 'login' %}" class="btn btn-md btn-primary">Login</a>
     {% endif %}
     
-    {% if user.is_authenticated %}
-      <a href="{% url 'create_blog' %}" class="btn btn-md btn-info"> &#43; Add Blog</a>
-    {% endif %}
+    
      <div class="row">
         {% for blog_post in blog_posts %}
             <div class="col-lg-4 col-md-3">
@@ -19,10 +17,7 @@
                     <h5 class="card-title font-weight-bold"><a href="{% url 'blog' blog_post.id %}">{{ blog_post.title}}</a></h5>
                     <p class="card-text"> {{ blog_post.body| truncatewords:15 }}</p>
                     <a href="{% url 'blog' blog_post.id %}" class="btn btn-primary">Read more</a> <br>
-                    <span class="text-muted"> {{blog_post.date_posted.date }} by 
-                        
-                        {{blog_post.creator}} 
-                    
+                    <span class="text-muted"> {{blog_post.date_posted.date }}
                     </span>
                     </div>
                 </div>
