--- a/templates/blog/login.html
+++ b/templates/blog/login.html
@@ -5,40 +5,44 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Document</title>
-    <link rel="stylesheet" href="{% static 'css/bootstrap.min.css' %}">
-    <link rel="stylesheet" href="{% static 'css/accounts/status.css' %}">
-    <link rel="stylesheet" href="{% static 'css/accounts/main.css' %}">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/tailwindcss/1.3.5/tailwind.min.css
+    ">
   </head>
   <body>
-
-    <form action="" method="POST">
+    <div class=" max-w-xs container mx-auto">
+      <form class="bg-white shadow-md rounded px-8 pt-6 pb-8 mb-4" method="POST">
       {% csrf_token %}
-
-      <label for="username">Username:</label>
-      <input
-        type="text"
-        name="username"
-        placeholder="username...."
-        class="form-control"
-      />
-      <hr />
-      <label for="password">Password:</label>
-      <input
-        type="password"
-        name="password"
-        placeholder="password..."
-        class="form-control"
-      />
-      <hr />
+        <div class="mb-4">
+          <label class="block text-gray-700 text-sm font-bold mb-2" for="username">
+            Username
+          </label>
+          <input class="shadow appearance-none border rounded w-full py-2 px-3 text-gray-700 leading-tight focus:outline-none focus:shadow-outline"
+           id="username" name="username" type="text" placeholder="Username">
+        </div>
+        <div class="mb-6">
+          <label class="block text-gray-700 text-sm font-bold mb-2" for="password">
+            Password
+          </label>
+          <input class="shadow appearance-none border border-red-500 rounded w-full py-2 px-3 text-gray-700 mb-3 leading-tight focus:outline-none focus:shadow-outline" 
+          id="password" type="password" name="password" placeholder="******************">
+          <p class="text-red-500 text-xs italic">Please choose a password.</p>
+        </div>
       {% for message in messages %}
-      <p>{{message}}</p>
-      {% endfor %}
-      <input type="submit" value="Login" />
+        <p>{{message}}</p>
+    {% endfor %}
+        <div class="flex items-center justify-between">
+          <button class="bg-blue-500 hover:bg-blue-700 text-white font-bold py-2 px-4 rounded focus:outline-none focus:shadow-outline" type="submit">
+            Sign In
+          </button>
+          <a class="inline-block align-baseline font-bold text-sm text-blue-500 hover:text-blue-800" href="{% url 'register' %}">
+             Register here
+          </a>
+        </div>
+      </form>
+    </div>
 
-      <p>
-        Don't have an account <a href="{% url 'register' %}">Register here</a>
-      </p>
-    </form>
+    
+</div>
 
   </body>
 </html>
