--- a/templates/blog/register.html
+++ b/templates/blog/register.html
@@ -1,37 +1,50 @@
 {% load static %}
 <!DOCTYPE html>
 <html lang="en">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <title>Document</title>
+    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
+    <link rel="stylesheet" href="{% static 'css/register.css' %}">
+  </head>
 
-<head>
-  <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>Document</title>
-  <link rel="stylesheet" href="{% static 'css/bootstrap.min.css' %}">
-  <link rel="stylesheet" href="{% static 'css/accounts/status.css' %}">
-  <link rel="stylesheet" href="{% static 'css/accounts/main.css' %}">
-</head>
+  <body>
+    {% block content %}
+    {% load widget_tweaks %}
+    <div class="container">
+      <form method="POST">
+        {% csrf_token %}
+           <label for="username">Username: </label>
+           {{form.username | add_class:"form-control"}}
 
-<body>
-  {% block content %}
-  <form action="" method="POST">
-    {% csrf_token %}
 
-    <label for="">username</label>
-    {{form.username}}
-    <hr />
-    <label for="">email</label>
-    {{form.email}}
-    <hr />
-    <label for="">password</label>
-    {{form.password1}}
-    <hr />
-    <label for="">confirm password</label>
-    {{form.password2}}
-    <input type="submit" value="Register" />
-    <p>Already have an account?</p>
-    <a href="{% url 'login' %}">Login</a>
-  </form>
-  {% endblock %}
-</body>
+          <label for="email">Email: </label>
+          {{form.email | add_class:"form-control"}}
 
+
+          <label for="password1">Password</label>
+          {{form.password1 | add_class:"form-control"}}
+
+
+          <label for="password2">Confirm Password</label>
+          {{form.password2 | add_class:"form-control"}}
+
+          <input
+            type="submit"
+            value="Register"
+            class="btn btn-primary"
+          />
+
+          <span>
+            <p>Already have an account?</p>
+          <a href="{% url 'login' %}">Login</a>
+
+          </span>
+          
+        </div>
+      </form>
+    </div>
+    {% endblock %}
+  </body>
 </html>
