--- a/templates/blog/create_blog.html
+++ b/templates/blog/create_blog.html
@@ -1,20 +1,26 @@
 {% block content %}
+{% load bootstrap4 %}
+{% bootstrap_css %}
 
-<form action="" method="POST">
-    {% csrf_token %}
+<div class="container">
+    <br>
+    <a href="{% url 'home' %}" class="btn btn-primary"> &#8592; Back Home</a>
+    <hr>
+    <div class="row d-flex justify-content-center">
 
-    <div class="row">
-       {{ blog_form.title }}
-       <hr>
-       {{ blog_form.body }}
-       <hr>
-       {{ blog_form.creator }}
-    </div>
-        
-    
+        <form action="" method="POST">
+            {% csrf_token %}
+            {% bootstrap_label content %}
+            {% bootstrap_form form %}
+            {% buttons %}
+            <button type="submit" class="btn btn-primary">
+              Submit
+            </button>
+          {% endbuttons %}
+        </form>
+        </div>
+</div>
 
-    <input type="submit" value="Save">
-</form>
 
 
 {% endblock %}
