--- a/templates/blog/navbar.html
+++ b/templates/blog/navbar.html
@@ -10,22 +10,17 @@
       max-width: 100px;
       max-height: 100px;
       margin: 0 auto;
-      border-radius: 50%;
+      border-radius: 60%;
   }
 </style>
 {% if user.is_authenticated %}
-  <nav class="navbar navbar-light bg-light">
-      <a class="navbar-brand">Navbar</a>
-      <p class="users"> Welcome {{ request.user }} </p>
-      <form class="form-inline">
-        <input class="form-control mr-sm-2" type="search" placeholder="Search" aria-label="Search">
-        <button class="btn btn-outline-success my-2 my-sm-0" type="submit">Search</button>
-      </form>
+  <nav class="navbar navbar-dark bg-dark">
+      <p class="users"> Welcome {{ request.user|capfirst }} </p>
       <a href="{% url 'create_blog' %}" class="btn btn-md btn-info"> &#43; Write a post </a>
       <a href="{% url 'logout' %}" class="btn btn-info">Logout</a>
      
     <a href="{% url 'profile' %}"><img class="profile-pic" src="{{request.user.profile.profile_pic.url}}" alt="profile" ></a>
-    </nav>
+  </nav>
 {% endif %}
 
 {% endblock %}
