--- a/templates/blog/account_setting.html
+++ b/templates/blog/account_setting.html
@@ -1,7 +1,7 @@
 {% block content %}
 <div class="col-md-9">
     <div class="card card-body">
-        <form enctype="multipart/form-data" method="POST" action="/profile/">
+        <form enctype="multipart/form-data" method="POST" action="/account_settings/">
             {% csrf_token %}
             {{form.as_p}}
         </from>
