--- a/templates/blog/user_page.html
+++ b/templates/blog/user_page.html
@@ -12,21 +12,22 @@
       crossorigin="anonymous"
     />
   </head>
+  <style>
+    .profile-pic {
+      width: 200px;
+      /* max-height: 200px; */
+      margin: 0 auto;
+      border-radius: 20px;
+    }
+  </style>
 
   <body>
     {% block content %}
-    <style>
-      .profile-pic {
-        max-width: 200px;
-        max-height: 200px;
-        margin: 0 auto;
-        border-radius: 50%;
-      }
-    </style>
-      <br>
+    
+    <div class="container-fluid">
       <div class="row">
         <div class="col-md-3">
-            <div><a href="{% url 'settings' %}"></a></div>
+          <div><a href="{% url 'settings' %}"></a></div>
           <div class="card card-body">
             <a href="{% url 'home' %}" class="btn btn-primary"> &#8592; Home</a>
             <hr />
@@ -36,6 +37,7 @@
               class="profile-pic"
               src="{{request.user.profile.profile_pic.url}}"
             />
+            <a href="{% url 'settings' %}">Edit Profile</a>
             <hr />
             Name: {{request.user.username}}
             <hr />
@@ -46,11 +48,37 @@
         </div>
 
         <div class="col-md-9">
-            <div class="card card-body">
-                <h2>My Posts</h2>
+          <div class="card card-body">
+            <h2>My Posts</h2>
+            <hr>
+            
+            <div class="row">
+              <div class="col-lg-4 col-md-3">
+                <div class="card" style="width: 18rem; height: 200px;">
+                  <div class="card-body">
+                    &#43;
+                    <a href="{% url 'create_blog' %}" class="btn btn-md btn-info">  Write a post </a>
+                  </div>
+                </div>
+              </div>
+            {% for blog in blogs %}
+            <div class="col-lg-4 col-md-3">
+              <div class="card" style="width: 18rem; min-height:200px;">
+                <div class="card-body">
+                  <h5 class="card-title font-weight-bold">{{blog.title}}</h5>
+                  <p class="card-text">{{ blog.body| truncatewords:15 }}</p>
+                  <span class="text-muted"> {{blog.date_posted.date }} </span>
+                </div>
+              </div>
             </div>
+            <br>
+            {% endfor %}
+
+          </div>
+          </div>
         </div>
       </div>
+    </div>
 
     {% endblock %}
   </body>
