--- a/templates/blog/login.html
+++ b/templates/blog/login.html
@@ -4,7 +4,8 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Document</title>
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/tailwindcss/1.4.6/tailwind.min.css">
+    <title>Login</title>
   </head>
   <body>
     <div class=" max-w-xs container mx-auto">
