--- a/templates/blog/login.html
+++ b/templates/blog/login.html
@@ -4,44 +4,34 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/tailwindcss/1.4.6/tailwind.min.css">
     <title>Login</title>
+    <link rel="stylesheet" href="{% static 'css/login.css' %}">
   </head>
   <body>
-    <div class=" max-w-xs container mx-auto">
-      <form class="bg-white shadow-md rounded px-8 pt-6 pb-8 mb-4" method="POST">
-      {% csrf_token %}
-        <div class="mb-4">
-          <label class="block text-gray-700 text-sm font-bold mb-2" for="username">
-            Username
-          </label>
-          <input class="shadow appearance-none border rounded w-full py-2 px-3 text-gray-700 leading-tight focus:outline-none focus:shadow-outline"
-           id="username" name="username" type="text" placeholder="Username">
-        </div>
-        <div class="mb-6">
-          <label class="block text-gray-700 text-sm font-bold mb-2" for="password">
-            Password
-          </label>
-          <input class="shadow appearance-none border border-red-500 rounded w-full py-2 px-3 text-gray-700 mb-3 leading-tight focus:outline-none focus:shadow-outline" 
-          id="password" type="password" name="password" placeholder="******************">
-          <p class="text-red-500 text-xs italic">Please choose a password.</p>
-        </div>
-      {% for message in messages %}
-        <p>{{message}}</p>
-    {% endfor %}
-        <div class="flex items-center justify-between">
-          <button class="bg-blue-500 hover:bg-blue-700 text-white font-bold py-2 px-4 rounded focus:outline-none focus:shadow-outline" type="submit">
-            Sign In
-          </button>
-          <a class="inline-block align-baseline font-bold text-sm text-blue-500 hover:text-blue-800" href="{% url 'register' %}">
-             Register here
-          </a>
-        </div>
-      </form>
-    </div>
-
-    
-</div>
-
+    {% load bootstrap4 %}
+    {% bootstrap_css %}
+    {% bootstrap_javascript jquery='full' %}
+    <div class="container">
+      <div class="row">
+        <div class="col-sm-9 col-md-7 col-lg-5 mx-auto">
+          <div class="card card-signin my-5">
+            <div class="card-body">
+              <h5 class="card-title text-center">Login</h5>
+              <form class="form-signin" method="POST">
+                {% csrf_token %}
+                <div class="form-label-group">
+                  <input type="text" name="username" class="form-control" placeholder="username" required autofocus>
+                </div>
+                <br>
+                <div class="form-label-group">
+                  <input type="password" name="password" class="form-control" placeholder="password" required>
+                </div>
+                <br>
+                <button class="btn btn-lg btn-primary btn-block text-uppercase" type="submit">Login</button>
+              </form>
+              <br>
+               <p class="text-center">Don't have an account yet? <span><a href="{% url 'register' %}">Register</a></span></p>
+            </div>
+          </div>
   </body>
 </html>
