--- a/templates/blog/homepage.html
+++ b/templates/blog/homepage.html
@@ -14,25 +14,22 @@
    
 </style>
 <div class="container">
-    <br>
-    {% if not user.is_authenticated  %}
-    <nav class="navbar navbar-dark bg-dark">
-       <a href="{% url 'login' %}" class="btn btn-md btn-primary">Login</a>
-    </nav>
-    {% endif %}
-    <br>
-    <h1 class="text-center">
-        Latest Post
-       </h1>
+    <header>
+        <h1 class="text-center"">
+            Latest Post
+        </h1>
+        <a href="{% url 'create_blog' %}" class="btn btn-md btn-info"> &#43; Write a post </a>
+    </header>
+   
     <hr>
     
     <div class="row">
         {% for blog_post in blog_posts %}
             <div class="col-lg-4  col-md-2">
-                <div class="card bg-dark" style="width: 18rem; margin-bottom: 20px; color: aliceblue;">
+                <div class="card bg-dark" style="width: 18rem; height: 200px; margin-bottom: 20px; color: aliceblue;">
                     <div class="card-body">
                     <h5 class="card-title font-weight-bold"><a href="{% url 'blog' blog_post.id %}">{{ blog_post.title}}</a></h5>
-                    <p class="card-text"> {{ blog_post.body| truncatewords:10 }}</p>
+                    <p class="card-text"> {{ blog_post.body|truncatechars:40}}</p>
                     <a href="{% url 'blog' blog_post.id %}" class="btn btn-primary">Read more</a> <br>
                     <span class="text-muted"> {{blog_post.date_posted.date }} by {{blog_post.creator}}
                     </span>
