--- a/templates/blog/login.html
+++ b/templates/blog/login.html
@@ -1,4 +1,6 @@
+{% extends 'blog/navbar.html'%}
 {% load static %}
+{% block content %}
 <!DOCTYPE html>
 <html lang="en">
   <head>
@@ -35,3 +37,4 @@
           </div>
   </body>
 </html>
+{% endblock %}
