--- a/templates/blog/navbar.html
+++ b/templates/blog/navbar.html
@@ -1,3 +1,27 @@
+<div class="container">
+  <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
+      <a class="navbar-brand" href="/">Blogeet</a>
+      <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+        <span class="navbar-toggler-icon"></span>
+      </button>
+      <div class="collapse navbar-collapse" id="navbarNav">
+        <ul class="navbar-nav">
+          <li class="nav-item active">
+            <a class="nav-link" href="/">Home <span class="sr-only">(current)</span></a>
+          </li>
+          {% if user.is_authenticated %}
+          <li class="nav-item">
+            <a class="nav-link" href="/logout">Logout</a>
+          </li>
+          {% else %}
+          <li class="nav-item">
+            <a class="nav-link" href="/login">Login</a>
+          </li>
+          {% endif %}
+        </ul>
+      </div>
+    </nav>
+</div>
 {% block content %}
 
 <style>
@@ -13,15 +37,5 @@
       border-radius: 60%;
   }
 </style>
-{% if user.is_authenticated %}
-  <nav class="navbar navbar-dark bg-dark">
-    <div>
-      <a href="{% url 'profile' %}"><img class="profile-pic" src="{{request.user.profile.profile_pic.url}}" alt="profile" ></a>
-      <p class="users"> Welcome {{ request.user|capfirst }} </p>
-    </div>
-    <span class="glyphicon glyphicon-plus"></span>
-      <a href="{% url 'logout' %}" class="btn btn-info">Logout</a>
-  </nav>
-{% endif %}
 
 {% endblock %}
