--- a/templates/blog/register.html
+++ b/templates/blog/register.html
@@ -1,33 +1,32 @@
+{% extends 'blog/main.html'%}
 {% load static %}
-<!DOCTYPE html>
-<html lang="en">
-  <head>
-    <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Register</title>
-    <link rel="stylesheet" href="{% static 'css/register.css' %}">
-  </head>
-
-  <body>
-    {% load bootstrap4 %}
-    {% bootstrap_css %}
-    {% bootstrap_javascript jquery='full' %}
+{% load bootstrap4 %}
+{% bootstrap_css %}
+{% bootstrap_javascript jquery='full' %}
+{% block title %} Blogeet | Register {% endblock %}
+{% block content %}
     <div class="container">
       <div class="row">
-        <form method="POST">
-          {% csrf_token %}
-            {% bootstrap_form form show_label=False show_help=False %}
-            {% buttons %}
-            <button type="submit" class="btn btn-primary">
-              Register
-            </button>
-          {% endbuttons %}
-            <span>
-              <p>Already have an account?</p>
-              <a href="{% url 'login' %}">Login</a>
-            </span>
-        </form>
+        <div class="col-sm-9 col-md-7 col-lg-5 mx-auto">
+          <div class="card card-signin my-5">
+            <div class="card-body">
+              <h5 class="card-title text-center">Register</h5>
+              <form method="POST" class="form-signin">
+                {% csrf_token %} 
+                {% bootstrap_form form show_label=False show_help=False %} 
+                {% buttons %}
+                <button type="submit" class="btn btn-primary">
+                  Register
+                </button>
+                {% endbuttons %}
+                <span>
+                  <p>Already have an account?</p>
+                  <a style="margin-left:0px ;"class="text-bold" href="{% url 'login' %}">Login</a>
+                </span>
+              </form>
+            </div>
+          </div>
+        </div>
       </div>
     </div>
-  </body>
-</html>
+{% endblock %}
