--- a/templates/blog/create_blog.html
+++ b/templates/blog/create_blog.html
@@ -4,9 +4,6 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <script src="https://cdn.tiny.cloud/1/b6rboq3j0r04qt0tuhhoze5dw0ohalq0c9b8o16aba2rrsuk/tinymce/5/tinymce.min.js" referrerpolicy="origin"></script>
-    <script src="{% static 'js/tinymce/tinymce.min.js' %}"></script>
-    <script type="text/javascript" src="{% static 'js/tinymce/custom.js' %}" ></script>
 </head>
 <body>
 {% load bootstrap4 %}
@@ -19,6 +16,7 @@
 
         <form action="" method="POST">
             {% csrf_token %}
+            {{ form.media }}
             {{ form.as_p }}
             <input type="submit" class="btn btn-primary" value="Submit">
         </div>
